# NeuroMark

./: .gitignore  LICENSE  README.md  electron.vite.config.ts  eslint.config.js  package-lock.json  package.json  prompt.txt  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: electron-build.yml
docs/: architecture.md
scripts/: build-native.mjs  stage-electron-artifacts.mjs
src-native/scancpp/: .gitignore  CMakeLists.txt  ELECTRON_MIGRATION.md  README.md
src-native/scancpp/src/: main.cpp  node_addon.cpp  scanner.cpp  scanner.hpp  win_delay_load_hook.cc
src-native/scancpp/tools/: export_onnx.py  requirements.txt
src/main/: index.ts
src/main/database/: client.ts  schema.ts
src/main/ipc/: answerGenerator.ts  app.ts  grading.ts  index.ts  preview.ts  projects.ts  scan.ts  settings.ts  smartNameMatch.ts  tasks.ts
src/main/prompts/answer-generator/: schema.ts  system.ts  user.ts
src/main/prompts/grading/: rubric-schema.ts  rubric-system.ts  rubric-user.ts  schema.ts  system.ts  user.ts
src/main/prompts/smart-name-match/: schema.ts  system.ts  user.ts
src/main/services/: answerGeneratorService.ts  appService.ts  documentScanService.ts  gradingService.ts  gradingTypes.ts  llmRequestLogger.ts  llmStreamUtils.ts  mockAssets.ts  projectService.ts  runtimeLogService.ts  settingsService.ts  smartNameMatchService.ts  taskManager.ts  types.ts
src/main/windows/: mainWindow.ts  previewWindow.ts
src/preload/: contracts.ts  index.ts
src/renderer/: index.html
src/renderer/src/: App.vue  main.ts
src/renderer/src/components/: CreateProjectModal.vue  ImagePreviewTile.vue  JsonTreeView.vue  MarkdownRenderer.vue  MetricCard.vue  NavSidebar.vue  StatusPill.vue  TopContextBar.vue
src/renderer/src/layouts/: AppShell.vue
src/renderer/src/router/: index.ts
src/renderer/src/stores/: answer-generator.ts  debug-panel.ts  projects.ts  settings.ts  tasks.ts
src/renderer/src/styles/: global.css
src/renderer/src/types/: global.d.ts  modules.d.ts
src/renderer/src/utils/: file.ts  result.ts
src/renderer/src/views/: AnswerGeneratorDetailView.vue  AnswerGeneratorHomeView.vue  AnswerGeneratorNewView.vue  AnswerGeneratorView.vue  DebugPanelView.vue  PreviewView.vue  ProjectDetailView.vue  ProjectsHomeView.vue  ProjectsView.vue  SettingsView.vue  TasksView.vue
tests/e2e/: smoke.spec.ts
tests/unit/: grading-prompts.test.ts  grading-service.test.ts  result-utils.test.ts  task-manager.test.ts  task-math.test.ts
